--- a/VignobleWEB/Pages/Account/Manage/Adresses/Index.cshtml
+++ b/VignobleWEB/Pages/Account/Manage/Adresses/Index.cshtml
@@ -11,7 +11,7 @@
 }
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
-<div class="row">
+<form class="row">
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
@@ -62,4 +62,4 @@
             </div>
         </form>
     </div>
-</div>
+</form>
