Ajout possibilité de créer une commande et de voir la liste des commande passées

--- a/VignobleWEB/Pages/Account/Manage/Commandes/Index.cshtml
+++ b/VignobleWEB/Pages/Account/Manage/Commandes/Index.cshtml
@@ -48,7 +48,7 @@
                                 
                             <td style="text-align: center">
                                 <a asp-page="/References/Details" asp-route-idReference="@enteteCommande.NumOrder">
-                                    <img src="/img/icon/visuel.png" style="width: 32px;" alt="logo">
+                                    <img src="/img/details.png" style="width: 32px;" alt="logo">
                                 </a>
                             </td>
                         </tr>
