--- a/VignobleWEB/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/VignobleWEB/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,10 +1,10 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Confirmation du mot de passe oublié";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+    Veuillez vérifier votre adresse mail pour réinitialiser votre mot de passe.
 </p>
