--- a/VignobleWEB/Pages/Account/ResendEmailConfirmation.cshtml
+++ b/VignobleWEB/Pages/Account/ResendEmailConfirmation.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<h2>Entre votre mail.</h2>
+<h2>Entrez votre mail.</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
