--- a/VignobleWEB/Pages/Privacy.cshtml
+++ b/VignobleWEB/Pages/Privacy.cshtml
@@ -1,8 +1,88 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "Condition d'utilisation";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Conditions d'utilisation du Site de Vente de Vins
+</p>
+<p>
+    Date d'effet : 01/12/2023
+</p>
+<p>
+    Bienvenue sur NEGOSUD, exploité par NEGOSUD. En accédant à ce site et en utilisant nos services, vous acceptez les conditions d'utilisation décrites ci-dessous. Veuillez les lire attentivement.
+</p>
+<p>
+    1. Utilisation du Site
+</p>
+<p>
+    1.1 En accédant à notre site, vous confirmez avoir l'âge légal pour consommer de l'alcool dans votre pays de résidence.
+</p>
+<p>
+    1.2 Vous vous engagez à utiliser notre site conformément aux lois en vigueur et à respecter les droits des autres utilisateurs.
+</p>
+<p>
+    1.3 Nous nous réservons le droit de suspendre ou de résilier votre accès au site en cas de violation des présentes conditions d'utilisation.
+</p>
+<p>
+    2. Commandes et Paiements
+</p>
+<p>
+    2.1 En passant une commande, vous confirmez être légalement autorisé à acheter des produits alcoolisés dans votre juridiction.
+</p>
+<p>
+    2.2 Les paiements doivent être effectués conformément aux options disponibles sur le site. Toutes les informations de paiement sont traitées de manière sécurisée.
+</p>
+<p>
+    2.3 Les prix des produits et les frais d'expédition sont indiqués lors du processus de commande. Des taxes locales peuvent s'appliquer.
+</p>
+<p>
+    3. Livraison
+</p>
+<p>
+    3.1 Nous nous engageons à expédier les produits commandés dans les délais spécifiés sur le site. Les retards indépendants de notre volonté peuvent survenir.
+</p>
+<p>
+    3.2 Vous êtes responsable de vous assurer que quelqu'un de plus de l'âge légal est disponible pour recevoir la livraison.
+</p>
+<p>
+    4. Annulations et Retours
+</p>
+<p>
+    4.1 Les annulations de commande sont acceptées dans les délais spécifiés sur le site avant l'expédition.
+</p>
+<p>
+    4.2 Les retours sont autorisés en cas de produits défectueux. Veuillez nous contacter dans les [nombre de jours] jours suivant la réception.
+</p>
+<p>
+    5. Confidentialité
+</p>
+<p>
+    5.1 Nous collectons des informations conformément à notre politique de confidentialité. En utilisant notre site, vous consentez à notre collecte et utilisation de vos données conformément à cette politique.
+</p>
+<p>
+    6. Propriété intellectuelle
+</p>
+<p>
+    6.1 Tout le contenu du site, y compris les images, textes, logos, etc., est la propriété exclusive de [Nom de l'Entreprise].
+</p>
+<p>
+    6.2 Vous ne pouvez pas reproduire, distribuer ou utiliser le contenu du site sans notre autorisation écrite.
+</p>
+<p>
+    7. Modification des Conditions d'utilisation
+</p>
+<p>
+    7.1 Nous nous réservons le droit de modifier ces conditions d'utilisation à tout moment. Les modifications seront effectives dès leur publication sur le site.
+</p>
+<p>
+    En utilisant ce site, vous acceptez ces conditions d'utilisation. Si vous n'êtes pas d'accord, veuillez ne pas utiliser notre site.
+</p>
+<p>
+    Pour toute question, veuillez nous contacter à l’adresse mail : negosud@exemple.com.
+</p>
+<p>
+    Merci de votre compréhension et de votre coopération.
+</p>
