--- a/VignobleWEB/Pages/Account/Manage/Adresses/Index.cshtml
+++ b/VignobleWEB/Pages/Account/Manage/Adresses/Index.cshtml
@@ -11,7 +11,7 @@
 }
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" for="StatusMessage" />
-<form class="row">
+<form class="row" method="post">
     <div class="col-md-6">
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
@@ -56,7 +56,8 @@
                     <label asp-for="Customer.Country" class="form-label">Pays</label>
                 </div>
             </div>
-
+            <input asp-for="Customer.Gender" hidden />
+            <input asp-for="Customer.Id" hidden />
             <div class="col">
                 <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Sauvegarder</button>
             </div>
